deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: categorisation-tool-svc
  namespace: categorisation-tool-dev
spec:
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: categorisation-tool
