deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: categorisation-tool
 namespace: ??-staging
 annotations:
   kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: allocation-manager-staging.apps.cloud-platform-live-0.k8s.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: categorisation-tool
          servicePort: 3000
